--- a/ShipStats.csproj
+++ b/ShipStats.csproj
@@ -11,7 +11,7 @@
         <AssemblyName>ShipStats</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
-        <LangVersion>10</LangVersion>
+        <LangVersion>latestmajor</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -101,7 +101,6 @@
         <Compile Include="Patches.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="VersionHandshake.cs" />
     </ItemGroup>
     <ItemGroup>
         <Content Include=".gitignore" />
